# lesson_27_1

./: postgres  pyproject.toml
companies/migrations/: 0001_initial.py
hunting/: settings.py  urls.py
vacancies/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
vacancies/migrations/: 0001_initial.py  0002_vacancy_user.py  0003_skill_vacancy_skills.py  0004_alter_skill_options_alter_vacancy_options.py
